[package]
name = "filenamefix"
version = "0.1.1"
authors = ["docoder <docoder@163.com>"]
edition = "2018"
description = "A tool for fix filename."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
