[package]
name = "filenamefix"
version = "0.1.4"
authors = ["docoder <docoder@163.com>"]
edition = "2018"
description = "A tool for fix filename."
license = "MIT"
repository = "https://github.com/docoder/filename-fix"
readme = "README.md"
keywords = ["file", "filename", "fix", "number", "space", "extension", "lowercase", "uppercase"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
regex = "1"
